Curio-codes | bug missing scrollbar fix

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,7 +24,7 @@ html, body, .frame, .website{
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h1, h2{
